# get_flutter_cupertino_icons

./: Cargo.toml  README.md  cupertino_icons.json  material_icons.json
src/: main.rs
